Fill Java/Spring/Boot